objects/Policy_Document_On_Case__c.object
<CustomObject>
    <description>Policy Documents on Case</description>
    <fields>
        <fullName>Action__c</fullName>
        <inlineHelpText>Used by custom program to record action performed by the user on the Policy Document record</inlineHelpText>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Policy_Identifiers__c</fullName>
        <inlineHelpText>Additional Policy Identifiers</inlineHelpText>
        <label>Additional Policy Identifiers</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Associated_Trust_Bits__c</fullName>
        <inlineHelpText>Associated Trust Bits</inlineHelpText>
        <label>Associated Trust Bits</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Secure Email</fullName>
                </value>
                <value>
                    <fullName>Server Authentication</fullName>
                </value>
                <value>
                    <fullName>Client Authentication</fullName>
                </value>
                <value>
                    <fullName>Code Signing</fullName>
                </value>
                <value>
                    <fullName>Document Signing</fullName>
                </value>
                <value>
                    <fullName>Encrypting File System</fullName>
                </value>
                <value>
                    <fullName>IP Security End System</fullName>
                </value>
                <value>
                    <fullName>IP Security IKE Intermediate</fullName>
                </value>
                <value>
                    <fullName>IP Security Tunnel Termination</fullName>
                </value>
                <value>
                    <fullName>IP Security User</fullName>
                </value>
                <value>
                    <fullName>OCSP Signing</fullName>
                </value>
                <value>
                    <fullName>Private Key Archiva</fullName>
                </value>
                <value>
                    <fullName>Time Stamping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Policy Documents (On Case)</relationshipLabel>
        <relationshipName>Policy_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Count_of_Associated_Root_Certificates__c</fullName>
        <label>Count of Associated Root Certificates</label>
        <summaryForeignKey>Policy_Document_Association_On_Case__c.Policy_Document__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Document_Last_Updated_Date__c</fullName>
        <inlineHelpText>Policy document Last Updated Date must be filled for policy document link</inlineHelpText>
        <label>Document Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Link__c</fullName>
        <inlineHelpText>URL to policy documentation specific to the listed root certs. Documents may be attached to Bugzilla Bugs as described here https://www.ccadb.org/cas/fields#uploading-documents.</inlineHelpText>
        <label>Document Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>CPS</fullName>
                </value>
                <value>
                    <fullName>CP/CPS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Verified__c</fullName>
        <label>Document Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>System Verified</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Policy_Doc_Id_18_digit__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Policy Doc Id (18 digit)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Doc_On_Case_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Policy Doc (On Case) External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Identifiers__c</fullName>
        <label>Policy Identifiers</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_Policy_Doc_Id__c</fullName>
        <inlineHelpText>Custom program copies the Policy Document record on Root Cert to Case</inlineHelpText>
        <label>Source Policy Doc Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Policy Document (On Case)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Policy Doc Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Documents (On Case)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>